// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AdvancedFilter multiple filter items 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="grade 3-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Grade 3
      </span>
      <span
        data-tooltip="Grade 3"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-all-btn-container"
      >
        <button
          className="filter-all-btn  selected-button filter-button"
          onClick={[Function]}
        >
          All
        </button>
      </div>
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Grade 1
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Grade 2
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Grade 3
        </button>
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Grade 4
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilter one filter item 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="filter-selection"
    id="grade 3-filter"
  >
    <label>
      <span
        info-label={true}
      >
        Grade 3
      </span>
      <span
        data-tooltip="Grade 3"
        data-tooltip-position="top"
      >
        <span
          className="fa fa-info-circle fa-sm"
        />
      </span>
    </label>
    <div
      className="child-filter-container"
    >
      <div
        className="filter-all-btn-container"
      >
        <button
          className="filter-all-btn  selected-button filter-button"
          onClick={[Function]}
        >
          All
        </button>
      </div>
      <div
        className="filter-button-container"
      >
        <button
          className=" filter-button"
          onClick={[Function]}
        >
          Grade 3
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AdvancedFilterContainer normal render 1`] = `
<div
  className="advanced-filter-container"
>
  <div
    className="filter-sub-header-container"
  >
    <div
      className="filter-advanced-filter-header"
    >
      <div
        className="filter-advanced-filter-title"
      >
        <h2
          style={
            Object {
              "color": "#63666A",
            }
          }
        >
          <span
            className="fa fa-tasks fa-lg"
          />
           Advanced Filters
        </h2>
        <span
          style={
            Object {
              "marginTop": "6px",
            }
          }
        >
           Click on an item to remove it from the list
        </span>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "marginRight": "10px",
          }
        }
      >
        <button
          className="filter-button"
          onClick={[Function]}
        >
          Expand 
          <span
            className="fa fa-chevron-right"
          />
        </button>
      </div>
    </div>
    <div
      className="filter-header"
    >
      <div
        className="filter-status"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter DropDown: multiple filter items 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade 3-basic-filter"
  >
    <label>
      Grade 3
    </label>
    <div
      className="basic-filter-body"
    >
      <select
        onChange={[Function]}
      >
        <option
          value="12346"
        >
          Grade 1
        </option>
        <option
          value="12347"
        >
          Grade 2
        </option>
        <option
          value="12345"
        >
          Grade 3
        </option>
        <option
          value="12348"
        >
          Grade 4
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter DropDown: one filter item 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade 3-basic-filter"
  >
    <label>
      Grade 3
    </label>
    <div
      className="basic-filter-body"
    >
      <select
        onChange={[Function]}
      >
        <option
          value="12345"
        >
          Grade 3
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter RadioBtn: multiple filter items 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade 3-basic-filter"
  >
    <label>
      Grade 3
    </label>
    <div
      className="basic-filter-body"
    >
      <form>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12346"
          />
          Grade 1
        </label>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12347"
          />
          Grade 2
        </label>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12345"
          />
          Grade 3
        </label>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12348"
          />
          Grade 4
        </label>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilter RadioBtn: one filter item 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexFlow": "column nowrap",
      "height": "100%",
      "justifyContent": "center",
      "paddingTop": "300px",
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-selection"
    id="grade 3-basic-filter"
  >
    <label>
      Grade 3
    </label>
    <div
      className="basic-filter-body"
    >
      <form>
        <label>
          <input
            checked={false}
            onChange={[Function]}
            type="radio"
            value="12345"
          />
          Grade 3
        </label>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilterContainer Basic Filter only 1`] = `
<div
  className="basic-filter-container"
>
  <div
    className="basic-filter"
  >
    <div
      className="basic-filter-selection"
      id="grades-basic-filter"
    >
      <label>
        Grades
      </label>
      <div
        className="basic-filter-body"
      >
        <select
          onChange={[Function]}
        >
          <option
            value="7"
          >
            Elementary
          </option>
          <option
            value="1"
          >
            Grade 3
          </option>
          <option
            value="2"
          >
            Grade 4
          </option>
          <option
            value="4"
          >
            Grade 5
          </option>
          <option
            value="8"
          >
            Grade 6
          </option>
          <option
            value="16"
          >
            Grade 7
          </option>
          <option
            value="32"
          >
            Grade 8
          </option>
          <option
            value="960"
          >
            High
          </option>
        </select>
      </div>
    </div>
    <div
      className="basic-filter-selection"
      id="techtype-basic-filter"
    >
      <label>
        TechType
      </label>
      <div
        className="basic-filter-body"
      >
        <form>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="CAT"
            />
            CAT
          </label>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="PT"
            />
            Performance Items
          </label>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BasicFilterContainer Basic Filter with Advanced filter expansion button 1`] = `
<div
  className="basic-filter-container"
>
  <div
    className="basic-filter"
  >
    <div
      className="basic-filter-selection"
      id="grades-basic-filter"
    >
      <label>
        Grades
      </label>
      <div
        className="basic-filter-body"
      >
        <select
          onChange={[Function]}
        >
          <option
            value="7"
          >
            Elementary
          </option>
          <option
            value="1"
          >
            Grade 3
          </option>
          <option
            value="2"
          >
            Grade 4
          </option>
          <option
            value="4"
          >
            Grade 5
          </option>
          <option
            value="8"
          >
            Grade 6
          </option>
          <option
            value="16"
          >
            Grade 7
          </option>
          <option
            value="32"
          >
            Grade 8
          </option>
          <option
            value="960"
          >
            High
          </option>
        </select>
      </div>
    </div>
    <div
      className="basic-filter-selection"
      id="techtype-basic-filter"
    >
      <label>
        TechType
      </label>
      <div
        className="basic-filter-body"
      >
        <form>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="CAT"
            />
            CAT
          </label>
          <label>
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="PT"
            />
            Performance Items
          </label>
        </form>
      </div>
    </div>
  </div>
  <div
    className="basic-filter-button-container"
  >
    <div>
      Advanced Filters
    </div>
    <button
      className="filter-button"
      onClick={[Function]}
    >
      Show
       
      <span
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Filter Container Contains both Basic and Advanced Filter 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="basic-filter-container"
  >
    <div
      className="basic-filter"
    >
      <div
        className="basic-filter-selection"
        id="grades-basic-filter"
      >
        <label>
          Grades
        </label>
        <div
          className="basic-filter-body"
        >
          <select
            onChange={[Function]}
          >
            <option
              value="7"
            >
              Elementary
            </option>
            <option
              value="1"
            >
              Grade 3
            </option>
            <option
              value="2"
            >
              Grade 4
            </option>
            <option
              value="4"
            >
              Grade 5
            </option>
            <option
              value="8"
            >
              Grade 6
            </option>
            <option
              value="16"
            >
              Grade 7
            </option>
            <option
              value="32"
            >
              Grade 8
            </option>
            <option
              value="960"
            >
              High
            </option>
          </select>
        </div>
      </div>
      <div
        className="basic-filter-selection"
        id="techtype-basic-filter"
      >
        <label>
          TechType
        </label>
        <div
          className="basic-filter-body"
        >
          <form>
            <label>
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="CAT"
              />
              CAT
            </label>
            <label>
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="PT"
              />
              Performance Items
            </label>
          </form>
        </div>
      </div>
    </div>
    <div
      className="basic-filter-button-container"
    >
      <div>
        Advanced Filters
      </div>
      <button
        className="filter-button"
        onClick={[Function]}
      >
        Show
         
        <span
          className="fa fa-chevron-right"
        />
      </button>
    </div>
  </div>
</div>
`;
